# GameTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: ECS_README.md
engine/core/: Game.cpp  Game.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
engine/ecs/: ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  SystemManager.hpp
engine/graphics/: Building.cpp  Building.hpp  Text.cpp  Text.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
game/components/: BuildingComponent.hpp  PositionComponent.hpp  SelectableComponent.hpp
game/systems/: HoverSystem.cpp  HoverSystem.hpp  InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ResourceSystem.cpp  ResourceSystem.hpp
tests/: test_building.cpp  test_component_manager.cpp  test_entity_manager.cpp  test_game.cpp  test_resourceManager.cpp  test_system_manager.cpp  test_text.cpp  test_tile.cpp  test_tileMap.cpp
tests/components/: test_building_component.cpp  test_position_component.cpp  test_selectable_component.cpp
tests/ecs/: test_component_manager.cpp  test_entity_manager.cpp  test_system_manager.cpp
tests/systems/: test_hover_system.cpp  test_input_system.cpp  test_render_system.cpp  test_resource_system.cpp
